--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  background-image: url("https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX35529300.jpg");
+  height: 80vh;
+  color: white;
+}
+
+.title {
+  color: rgb(27, 197, 209);
+  background-color: rgb(255, 255, 255);  
 }
 
 .App-logo {
@@ -7,20 +15,31 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgba(255, 255, 255, 0.842);
 }
 
 .App-link {
   color: #09d3ac;
 }
 
+.form {
+  background-color: rgba(71, 71, 71, 0.596);
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.6rem;
+  padding: 20px;
+  margin: 1%;
+
+}
+
 .card {
-  background-color: yellow;
+  background-color: rgb(255, 187, 0);
+  margin-left: 30%;
+  margin-right: 30%;
 }
