--- a/src/App.css
+++ b/src/App.css
@@ -7,26 +7,13 @@
 
 .title {
   color: rgb(27, 197, 209);
-  background-color: rgb(255, 255, 255);  
-}
+  background-color: rgb(255, 255, 255);
+}  
+  
+.title h1 {
+    font-size: 3rem;
+  }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgba(255, 255, 255, 0.842);
-}
-
-.App-link {
-  color: #09d3ac;
-}
 
 .form {
   background-color: rgba(71, 71, 71, 0.596);
